--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.1",
+    "bcryptjs": "^3.0.3",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
+    "prisma": "^6.19.1",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
